<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_second"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context="com.example.android.learnespresso.SecondActivity">

    <TextView
        android:id="@+id/tv_result_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Result View"/>

</RelativeLayout>
